Changed parseWord type signatre

--- a/slides.html
+++ b/slides.html
@@ -139,7 +139,7 @@ toBS &quot;Hello!&quot; :: ByteString
 parseWords :: ByteString -&gt; [ByteString]
 
 -- Which&#39;ll be easier if we find out how to parse a single word first
-parseWord :: ByteString -&gt; [ByteString]</code></pre>
+parseWord :: Parser ByteString</code></pre>
 </section>
 <section id="attoparsec-predicates" class="level1">
 <h1>Attoparsec predicates</h1>
