Changed index title for Haskell.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="20190413_parser_combinators/index.html">Parser combinators</a>
+<a href="20190413_parser_combinators/index.html">04/13/2019 - Haskell - Parser Combinators</a>
